<resources>
    <string name="app_name">Boxify</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="get_started">Get Started</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="inventory_simplified">Inventory Simplified</string>
    <string name="items">Items</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search_filter_export"><![CDATA[Search, Filter & Export]]></string>
    <string name="track_every_detail">Track Every Detail</string>
    <string name="it_is_empty_here">It is empty here...</string>
    <string name="add_your_first_item_by_tapping_the">Add your first item by tapping the | + |</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="todo_report">TODO</string>
    <string name="todo_help">TODO</string>
    <string name="user_profile">User Profile</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="log_in">Log in</string>
    <string name="nothing_to_see_here">Nothing to see here...</string>
    <string name="enter_text_to_start_your_search">Enter text to start your search</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_">Continue</string>
    <string name="by_creating_an_account_you_agree_to_boxify_s_terms_conditions_and_privacy_policy"><![CDATA[By creating an account, you agree to Boxify’s Terms & Conditions and Privacy Policy]]></string>
    <string name="ok">OK</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_account">Create account</string>
    <string name="or">OR</string>
    <string name="new_here">New here?</string>
    <string name="create_an_account">Create an account</string>
    <string name="help_us_personalize_your_experience_nby_sharing_a_few_details_about_your_needs">Help us personalize your experience \nby sharing a few details about your needs.</string>
    <string name="text_help_us">Help us personalize your experience by\nsharing a few details about your needs.</string>
    <string name="a_bit_about_nyour_inventory">A bit about\nyour inventory</string>
    <string name="what_are_you_using_boxify_to_track">What are you using Boxify to track?</string>
    <string name="what_category_of_items_are_you_tracking">What category of items are you tracking?</string>
    <string name="food_and_beverage">Food and beverage</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="add_photos">Add photos</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="unit">unit</string>
    <string name="price">Price</string>
    <string name="min_level">Min Level</string>
    <string name="total_value">Total Value</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="qr_barcodes">QR / Barcodes</string>
    <string name="link_qr_barcode">LINK QR / BARCODE</string>
    <string name="adding_to">Adding to:</string>
    <string name="add_item">Add Item</string>
    <string name="add_item_via_scan">Add Item via scan</string>
    <string name="add_folder">Add Folder</string>
    <string name="cancel">Cancel</string>
    <string name="user_cases">User Cases</string>
    <string name="done">Done</string>
    <string name="cataloging_personal_items">Cataloging personal items</string>
    <string name="materials_for_manufacturing">Materials for manufacturing</string>
    <string name="supplies_materials_parts_and_consumable_items">Supplies, materials, parts and consumable items</string>
    <string name="type_other_option">Type other option</string>
    <string name="others">Others</string>
    <string name="office_supplies_and_stationery">Office supplies and stationery</string>
    <string name="hardware_and_parts">Hardware and parts</string>
    <string name="medical_supplies">Medical supplies</string>
    <string name="personal_items">Personal items</string>
    <string name="funiture">Funiture</string>
    <string name="it_equipment">IT equipment</string>
    <string name="items_types">Items types</string>
    <string name="products_being_sold">Products being sold</string>
    <string name="get_started_for_free_today">Get started for free today</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inventory_summary">Inventory Summary</string>
    <string name="folders">Folders</string>
    <string name="total_qty">Total Qty</string>
    <string name="_1_500">1,500$</string>
    <string name="_1_unit">1 unit</string>
</resources>