<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.activity.SecondDropdownActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/button_bg_color">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingStart="24dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_light"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/gray_light"
            android:text="@string/items_types" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingEnd="24dp"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_light"
            android:text="@string/done"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/funiture"
        android:textColor="@color/button_bg_color" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/it_equipment"
        android:textColor="@color/button_bg_color" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:drawableEnd="@drawable/check"
        android:text="Food and beverage"
        android:textColor="@color/button_bg_color"
        tools:ignore="HardcodedText,UseCompatTextViewDrawableXml" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/office_supplies_and_stationery"
        android:textColor="@color/button_bg_color"/>
    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/hardware_and_parts"
        android:textColor="@color/button_bg_color"/>
    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/medical_supplies"
        android:textColor="@color/button_bg_color"/>
    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/personal_items"
        android:textColor="@color/button_bg_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/others"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/border_white_qa"
            android:minHeight="24dp"
            android:padding="10dp"
            android:text="@string/type_other_option"
            android:textSize="12sp"
            tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>