<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".view.ui.activity.FirstDropdownActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/button_bg_color">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingStart="24dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_light"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/gray_light"
            android:text="@string/user_cases" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:paddingEnd="24dp"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_light"
            android:text="@string/done"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/cataloging_personal_items"
        android:textColor="@color/button_bg_color" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/materials_for_manufacturing"
        android:textColor="@color/button_bg_color" />
    <TextView
        android:id="@+id/textView88"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/products_being_sold"
        android:textColor="@color/button_bg_color" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:drawableEnd="@drawable/check"
        android:text="@string/supplies_materials_parts_and_consumable_items"
        android:textColor="@color/button_bg_color"
        tools:ignore="UseCompatTextViewDrawableXml" />
</LinearLayout>