<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:fontFamily="@font/ageo_regular"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingStart="13dp"
        android:paddingEnd="0dp"
        android:paddingTop="31dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/gray"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="127dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:background="@drawable/bg_box_dashboard">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/layers"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory_summary"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/items"/>

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/folders"/>

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/total_qty"/>

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/total_value"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1_unit"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="75dp"
                            android:layout_height="wrap_content"
                            android:text="@string/_1_500"
                            android:textStyle="bold"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="107dp"
                        android:background="@drawable/bg_box_dashboard"/>
                    <FrameLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="107dp"
                        android:background="@drawable/bg_box_dashboard"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="RECENT ITEMS"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_main_drop_shadow">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="13dp"
                    android:text="No items."
                    android:textSize="16dp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>